# asr-pool-api

./: README.md  pyproject.toml
src/asr_pool_api/: __init__.py  _codec.py  _transport.py  client.py  exceptions.py  models.py
tests/: test_client.py  test_codec.py  test_transport.py
